@@ -8,9 +8,8 @@ import bio.terra.common.exception.NotFoundException;
 import bio.terra.externalcreds.BaseTest;
 import bio.terra.externalcreds.TestUtils;
 import bio.terra.externalcreds.config.ProviderConfig;
-import bio.terra.externalcreds.config.ProviderConfig.ProviderInfo;
+import com.google.common.collect.ImmutableMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import org.junit.jupiter.api.Test;
@@ -39,7 +38,7 @@ public class ProviderServiceTest extends BaseTest {
 
   @Test
   void testDeleteLinkProviderNotFound() {
-    when(providerConfig.getServices()).thenReturn(Map.of());
+    when(providerConfig.getServices()).thenReturn(ImmutableMap.of());
 
     assertThrows(
         NotFoundException.class,
@@ -52,7 +51,8 @@ public class ProviderServiceTest extends BaseTest {
     var linkedAccount = TestUtils.createRandomLinkedAccount();
 
     when(providerConfig.getServices())
-        .thenReturn(Map.of(linkedAccount.getProviderId(), new ProviderInfo()));
+        .thenReturn(
+            ImmutableMap.of(linkedAccount.getProviderId(), TestUtils.createRandomProvider()));
 
     when(linkedAccountService.getLinkedAccount(
             linkedAccount.getUserId(), linkedAccount.getProviderId()))
@@ -68,11 +68,9 @@ public class ProviderServiceTest extends BaseTest {
     var mockServerPort = 50555;
     var linkedAccount = TestUtils.createRandomLinkedAccount();
 
-    var providerInfo = new ProviderInfo();
-    providerInfo.setClientId("clientId");
-    providerInfo.setClientSecret("clientSecret");
-    providerInfo.setRevokeEndpoint(
-        "http://localhost:" + mockServerPort + revocationPath + "?token=%s");
+    var providerInfo =
+        TestUtils.createRandomProvider()
+            .setRevokeEndpoint("http://localhost:" + mockServerPort + revocationPath + "?token=%s");
 
     var expectedParameters =
         List.of(
@@ -81,7 +79,7 @@ public class ProviderServiceTest extends BaseTest {
             new Parameter("client_secret", providerInfo.getClientSecret()));
 
     when(providerConfig.getServices())
-        .thenReturn(Map.of(linkedAccount.getProviderId(), providerInfo));
+        .thenReturn(ImmutableMap.of(linkedAccount.getProviderId(), providerInfo));
 
     when(linkedAccountService.getLinkedAccount(
             linkedAccount.getUserId(), linkedAccount.getProviderId()))
